Fix control group wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,7 @@ body {
 	display: flex;
 	justify-content: center;
 	gap: 1.2em;
+	flex-wrap: wrap;
 }
 
 #logo img {
